{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 44,
  "lineage": "37f660c5-bff6-d249-0638-61c98d3de6cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd8e31a6e0e523ee",
            "association_id": "eipassoc-062da807049998799",
            "domain": "vpc",
            "id": "eipalloc-0cd8e31a6e0e523ee",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0abca5b08cad4f430",
            "private_dns": "ip-10-0-3-221.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.221",
            "public_dns": "ec2-13-251-254-154.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.254.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.assessment-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c22ab247297a24fc",
            "association_id": "eipassoc-07655b54adc7d5b03",
            "domain": "vpc",
            "id": "eipalloc-0c22ab247297a24fc",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0ba7046311ceacc27",
            "private_dns": "ip-10-0-4-58.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.58",
            "public_dns": "ec2-54-254-96-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.96.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.assessment-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0448a0652fd0276ba",
            "association_id": "eipassoc-0284051f722337b07",
            "domain": "vpc",
            "id": "eipalloc-0448a0652fd0276ba",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-03acf3637d7793615",
            "private_dns": "ip-10-0-5-117.ap-southeast-1.compute.internal",
            "private_ip": "10.0.5.117",
            "public_dns": "ec2-18-143-42-180.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.42.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:internet-gateway/igw-007dea89ee2d2072f",
            "id": "igw-007dea89ee2d2072f",
            "owner_id": "763608413013",
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:loadbalancer/app/sg-alb-assessment/8dd05afef1ca4859",
            "arn_suffix": "app/sg-alb-assessment/8dd05afef1ca4859",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sg-alb-assessment-943461862.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:loadbalancer/app/sg-alb-assessment/8dd05afef1ca4859",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sg-alb-assessment",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067630561b8cfdf70"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a097bf322cd961b"
              },
              {
                "subnet_id": "subnet-09434d522cb40fb74"
              },
              {
                "subnet_id": "subnet-0cf42c1d39cd5e6ef"
              }
            ],
            "subnets": [
              "subnet-05a097bf322cd961b",
              "subnet-09434d522cb40fb74",
              "subnet-0cf42c1d39cd5e6ef"
            ],
            "tags": {
              "Project": "assessment-secgroup",
              "name": "assessment-alb"
            },
            "tags_all": {
              "Project": "assessment-secgroup",
              "name": "assessment-alb"
            },
            "vpc_id": "vpc-09c549bd72de25ce1",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_s3_bucket.s3_bucket",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:listener/app/sg-alb-assessment/8dd05afef1ca4859/799f4b42f6b3f3a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:targetgroup/alb-target/d2739f42db8c04e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:listener/app/sg-alb-assessment/8dd05afef1ca4859/799f4b42f6b3f3a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:loadbalancer/app/sg-alb-assessment/8dd05afef1ca4859",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Project": "assessment-secgroup",
              "name": "front_end"
            },
            "tags_all": {
              "Project": "assessment-secgroup",
              "name": "front_end"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ALB_Target",
            "aws_s3_bucket.s3_bucket",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ALB_Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:targetgroup/alb-target/d2739f42db8c04e7",
            "arn_suffix": "targetgroup/alb-target/d2739f42db8c04e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:763608413013:targetgroup/alb-target/d2739f42db8c04e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "assessment-secgroup",
              "name": "alb-target"
            },
            "tags_all": {
              "Project": "assessment-secgroup",
              "name": "alb-target"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd8e31a6e0e523ee",
            "connectivity_type": "public",
            "id": "nat-06a9d5cbfcd517bc9",
            "network_interface_id": "eni-0abca5b08cad4f430",
            "private_ip": "10.0.3.221",
            "public_ip": "13.251.254.154",
            "subnet_id": "subnet-0cf42c1d39cd5e6ef"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c22ab247297a24fc",
            "connectivity_type": "public",
            "id": "nat-0672ea2f6b2eae0d3",
            "network_interface_id": "eni-0ba7046311ceacc27",
            "private_ip": "10.0.4.58",
            "public_ip": "54.254.96.36",
            "subnet_id": "subnet-05a097bf322cd961b"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0448a0652fd0276ba",
            "connectivity_type": "public",
            "id": "nat-0eb38ac27a9befab0",
            "network_interface_id": "eni-03acf3637d7793615",
            "private_ip": "10.0.5.117",
            "public_ip": "18.143.42.180",
            "subnet_id": "subnet-09434d522cb40fb74"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-007dea89ee2d2072f",
            "id": "r-rtb-07b7a54f70d8c89b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b7a54f70d8c89b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:route-table/rtb-0dac342837bb68dac",
            "id": "rtb-0dac342837bb68dac",
            "owner_id": "763608413013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a9d5cbfcd517bc9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:route-table/rtb-0382c5f687c0df1fd",
            "id": "rtb-0382c5f687c0df1fd",
            "owner_id": "763608413013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0672ea2f6b2eae0d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:route-table/rtb-0a1a905f6280b13e1",
            "id": "rtb-0a1a905f6280b13e1",
            "owner_id": "763608413013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb38ac27a9befab0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a454e9bb12fdf4ae",
            "route_table_id": "rtb-0dac342837bb68dac",
            "subnet_id": "subnet-0356b554d52beea10"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b40fd55f942ea2",
            "route_table_id": "rtb-0382c5f687c0df1fd",
            "subnet_id": "subnet-0430a2cf6840b2b78"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea40f6ce1fc5ea1e",
            "route_table_id": "rtb-0a1a905f6280b13e1",
            "subnet_id": "subnet-026f70d9b33309612"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:security-group/sg-067630561b8cfdf70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067630561b8cfdf70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-alb-security-group-assessment",
            "name_prefix": "",
            "owner_id": "763608413013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_secgroup",
              "Project": "assessment-secgroup"
            },
            "tags_all": {
              "Name": "alb_secgroup",
              "Project": "assessment-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:security-group/sg-0f74b305bd74b14a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74b305bd74b14a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_securitygroup",
            "name_prefix": "",
            "owner_id": "763608413013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_securitygroup",
              "Project": "assessment-secgroup"
            },
            "tags_all": {
              "Name": "webserver_securitygroup",
              "Project": "assessment-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assessment-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-0356b554d52beea10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0356b554d52beea10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-0430a2cf6840b2b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0430a2cf6840b2b78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-026f70d9b33309612",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026f70d9b33309612",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-0cf42c1d39cd5e6ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf42c1d39cd5e6ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-05a097bf322cd961b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a097bf322cd961b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:subnet/subnet-09434d522cb40fb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09434d522cb40fb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763608413013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09c549bd72de25ce1"
          },
          "dependencies": [
            "aws_vpc.assessment-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assessment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:763608413013:vpc/vpc-09c549bd72de25ce1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eff6b1dc4c64804b",
            "default_route_table_id": "rtb-07b7a54f70d8c89b6",
            "default_security_group_id": "sg-02d54b16a42214cb1",
            "dhcp_options_id": "dopt-0aaa30914e7e6bc14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c549bd72de25ce1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b7a54f70d8c89b6",
            "owner_id": "763608413013",
            "tags": {
              "Name": "assessment-vpc-sg"
            },
            "tags_all": {
              "Name": "assessment-vpc-sg"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}